--- a/README.La
+++ b/README.La
@@ -5,12 +5,12 @@
 
 Here are some ideas to get you started:
 
-- 🔭 I’m currently working on ... HMT, CSS, Pseudocode,and Java Script    
-- 🌱 I’m currently learning ... HMT
+- 🔭 I’m currently working on ... HMTL, CSS, Pseudocode,and Java Script    
+- 🌱 I’m currently learning ... HMTL
 - 👯 I’m looking to collaborate on ... Codeing
-- 🤔 I’m looking for help with ... all subjects
-- 💬 Ask me about ... what i am formiler with
+- 🤔 I’m looking for help with ... all subjects expecially files.
+- 💬 Ask me about ... I am formiler with html,css,and java Script
 - 📫 How to reach me: ... meemeeof15@gmail.com
 - 😄 Pronouns: ... Help
-- ⚡ Fun fact: ... I am nervious
+- ⚡ Fun fact: ... I am nervious and want to do my very best.
 -->
